--- a/package.json
+++ b/package.json
@@ -9,19 +9,42 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "add": "^2.0.6",
+    "appwrite": "^18.2.0",
+    "button": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "ics": "^3.8.1",
+    "lucide": "^0.526.0",
+    "lucide-react": "^0.526.0",
+    "luxon": "^3.7.1",
+    "next": "15.4.4",
+    "node-appwrite": "^17.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.4"
+    "shadcdn": "^0.0.8",
+    "shadcn": "^2.9.3",
+    "shadcn-ui": "^0.9.5",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
+    "twilio": "^5.8.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6",
+    "typescript": "^5"
   }
 }
